pkgs/drbd9/drbd/.compat_test.6.1.26/have_blk_cleanup_disk.stderr
<command-line>: warning: "KBUILD_MODNAME" redefined
<command-line>: note: this is the location of the previous definition
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/have_blk_cleanup_disk.c: In function ‘foo’:
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/have_blk_cleanup_disk.c:7:9: error: implicit declaration of function ‘blk_cleanup_disk’; did you mean ‘blk_alloc_disk’? [-Werror=implicit-function-declaration]
    7 |         blk_cleanup_disk(disk);
      |         ^~~~~~~~~~~~~~~~
      |         blk_alloc_disk
cc1: some warnings being treated as errors
